--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header class="flex items-center mt-3.5 justify-between mb-10.5">
         <div class="flex items-center gap-2">
             <i class="fa-solid fa-bars w-6 h-6 cursor-pointer"></i>
-            <img src="./assets/mob_logo.png" alt="Website logo" width="40" height="40" />
+            <img src="/assets/mob_logo.png" alt="Website logo" width="40" height="40" />
             <p class="font-bold text-3xl">Vroda</p>
         </div>
         <button class="rounded-[11px] bg-black border-0 text-white px-3 py-3.5">Вхід/Реєстрація</button>
@@ -34,7 +34,7 @@
         </div>
         <div class="flex items-start justify-center flex-col gap-2 font-bold text-[32px] text-left ml-4.5 my-28.5">
             <div class="flex items-center gap-1.5">
-                <p>Vroda Space</p><img src="./assets/h1line.png" alt="Decorative line" width="99" height="14" />
+                <p>Vroda Space</p><img src="/assets/h1line.png" alt="Decorative line" width="99" height="14" />
             </div>
             <p class="pl-26">твій простір</p>
             <p><span class="gradient">краси</span> та зручності</p>
@@ -45,7 +45,7 @@
                 <p class="text-[#999] text-xs font-medium pb-5">+15 нових тем</p>
                 <button class="bg-black rounded-[11px] size-11 "><i class="fa-solid fa-arrow-right"></i></button>
             </div>
-            <img src="./assets/mobBlogPic.png" alt="Decorative girl image" width="84" height="102" />
+            <img src="/assets/mobBlogPic.png" alt="Decorative girl image" width="84" height="102" />
         </div>
         <div class="text-[#999] my-6">
             <i class="fa-solid fa-people-group"></i>
@@ -58,7 +58,7 @@
                 <i class="fa-solid fa-angle-right"></i>
             </span>
         </button>
-        <img src="./assets/mobAdvPic.png" alt="Advantages picture" width="343" height="106" class="my-16" />
+        <img src="/assets/mobAdvPic.png" alt="Advantages picture" width="343" height="106" class="my-16" />
         <section>
             <div class="mb-14 text-center font-semibold">
                 <h3 class="text-3xl mb-4">Наші переваги</h3>
@@ -68,8 +68,8 @@
             </div>
             <div class="bg-[#f2f2f2] rounded-2xl p-6 mb-4">
                 <p class="font-semibold text-xl mb-3">Фотогалерея послуг</p>
-                <div class="flex mb-4"><img src="./assets/mobGalleryPicOne.png" alt="Barbershop servicec picture"
-                        width="137" height="208"><img src="./assets/mobGalleryPicTwo.png" alt="Decorative makeup image"
+                <div class="flex mb-4"><img src="/assets/mobGalleryPicOne.png" alt="Barbershop servicec picture"
+                        width="137" height="208"><img src="/assets/mobGalleryPicTwo.png" alt="Decorative makeup image"
                         width="158" height="208">
                 </div>
                 <p class="font-medium mb-3">Переглядай реальні роботи майстрів, оцінюй портфоліо та знаходь найкращих!
@@ -90,7 +90,7 @@
         <section class="my-8">
             <h3 class="font-semibold text-xl mb-4 px-6">Відкритість сервісу</h3>
             <p class="font-medium px-6">Доступ до каталогу майстрів, послуг та портфоліо – без реєстрації!</p>
-            <img src="./assets/line.png" alt="Decorative line" width="375" height="120" class="my-12">
+            <img src="/assets/line.png" alt="Decorative line" width="375" height="120" class="my-12">
             <p class="font-medium px-6">Запис доступний лише зареєстрованим користувачам, щоб ти міг зберігати свою
                 історію
                 відвідувань та
@@ -133,7 +133,7 @@
             <p class="mb-8 font-semibold text-sm text-[#999] text-center">Ми прагнемо зробити сферу краси відкритою,
                 доступною та
                 зручною для кожного.</p>
-            <img src="./assets/ourMissionGroup.png" class="-mx-4" alt="`Our mission` decorative line">
+            <img src="/assets/ourMissionGroup.png" class="-mx-4" alt="`Our mission` decorative line">
             <div class="flex flex-col gap-4">
                 <div class="flex flex-col">
                     <span class="bg-black p-1.5 size-8 rounded-lg mb-3"><i
@@ -206,15 +206,15 @@
             <div class="flex flex-col gap-6 pb-6">
                 <div class="bg-white rounded-2xl pt-6 px-6 w-[327px] mx-auto">
                     <p class="font-semibold text-center">Зручно керувати своїм записом</p>
-                    <img src="./assets/001/mobHelpOne.png" class="block mx-auto pt-6" />
+                    <img src="/assets/001/mobHelpOne.png" class="block mx-auto pt-6" />
                 </div>
                 <div class="bg-white rounded-2xl pt-6 px-6 w-[327px] mx-auto">
                     <p class="font-semibold text-center">Отримувати більше відгуків та рейтингів</p>
-                    <img src="./assets/mobHelpTwo.png" class="block mx-auto pt-6" />
+                    <img src="/assets/mobHelpTwo.png" class="block mx-auto pt-6" />
                 </div>
                 <div class=" bg-white rounded-2xl pt-6 px-6 w-[327px] mx-auto">
                     <p class="font-semibold text-center">Залишатися на зв’язку з клієнтами через додаток</p>
-                    <img src="./assets/001/mobHelpThree.png" class="block mx-auto pt-6" />
+                    <img src="/assets/001/mobHelpThree.png" class="block mx-auto pt-6" />
                 </div>
             </div>
         </section>
@@ -237,7 +237,7 @@
                 <div class="bg-[#f2f2f2] rounded-3xl p-6">
                     <div class="flex items-center justify-between">
                         <p class="font-light text-[30px] mb-5">91%</p>
-                        <img src="./assets/mobUsers.png" class="pb-4" alt="Picture of users" width="160" height="40">
+                        <img src="/assets/mobUsers.png" class="pb-4" alt="Picture of users" width="160" height="40">
                     </div>
                     <p class="font-semibold text-xl mb-4">клієнтів готові змінити майстра</p>
                     <p class="text-sm font-medium">якщо знайдуть більш зручний спосіб запису та взаємодії.</p>
@@ -250,10 +250,10 @@
             </div>
         </section>
         <section class="mb-8">
-            <span class="red font-semibold text-[28px] flex items-center gap-2">Vroda space<img
-                    src="./assets/h1line.png" alt="" width="109" height="13">
+            <span class="red font-semibold text-[28px] flex items-center gap-2">Vroda space<img src="/assets/h1line.png"
+                    alt="" width="109" height="13">
                 це</span>
-            <p class="text-center  font-semibold text-[28px]">Легкий запис(<img src="./assets/mobUsers.png"
+            <p class="text-center  font-semibold text-[28px]">Легкий запис(<img src="/assets/mobUsers.png"
                     class="inline" alt="" width="80" h="50">) без дзвінків
                 та листування.
             </p>
@@ -286,7 +286,7 @@
                 <i class="fa-solid fa-arrow-right cursor-pointer"></i>
             </span>
             <div class="flex flex-col gap-4">
-                <div class="bg-[#f2f2f2] rounded-2xl"><img src="./assets/mobNewTrends.png"
+                <div class="bg-[#f2f2f2] rounded-2xl"><img src="/assets/mobNewTrends.png"
                         alt="Picture of human holding product" width="343" height="314" class="rounded-t-2xl">
                     <div class="px-4 pt-6">
                         <h5 class="capitalize text-xl font-semibold mb-3 pt-3">Нові тренди у світі краси</h5>
@@ -308,8 +308,8 @@
                             <i class="fa-solid fa-arrow-right cursor-pointer"></i> </span>
                     </div>
                 </div>
-                <div class="bg-[#f2f2f2] rounded-2xl"><img src="./assets/line.png"
-                        alt="Picture of human holding product" width="343" height="91" class="mt-8">
+                <div class="bg-[#f2f2f2] rounded-2xl"><img src="/assets/line.png" alt="Picture of human holding product"
+                        width="343" height="91" class="mt-8">
                     <div class="px-4 pt-6">
                         <h5 class="capitalize text-xl font-semibold mb-3 pt-3">Поради для майстрів (як залучати
                             клієнтів, як працювати з рейтингом).</h5>
@@ -342,8 +342,8 @@
                         <p>
                     </div>
                 </div>
-                <div class="bg-[#f2f2f2] rounded-2xl"><img src="./assets/line.png"
-                        alt="Picture of human holding product" width="343" height="91" class="mt-8">
+                <div class="bg-[#f2f2f2] rounded-2xl"><img src="/assets/line.png" alt="Picture of human holding product"
+                        width="343" height="91" class="mt-8">
                     <div class="px-4 pt-6">
                         <h5 class="capitalize text-xl font-semibold mb-3 pt-3">Поради для майстрів (як залучати
                             клієнтів, як працювати з рейтингом).</h5>
@@ -363,7 +363,7 @@
         </section>
         <section class="my-8">
             <h4 class="font-semibold text-[28px]">Часті запитання</h4>
-            <img src="./assets/mobFAQ.png" alt="Decorative image of girl" width="343" height="249" class="my-14">
+            <img src="/assets/mobFAQ.png" alt="Decorative image of girl" width="343" height="249" class="my-14">
             <div class="flex flex-col gap-4">
                 <details class="group transition-all duration-300">
                     <summary class="relative flex justify-between items-center cursor-pointer text-lg font-medium text-black pb-4
@@ -439,7 +439,7 @@
         </section>
     </main>
     <footer class="gradient-bg-blue rounded-t-4xl px-6 py-8">
-        <h6 class="flex items-center justify-center gap-2 mb-6 text-5xl font-bold"> <img src="./assets/mob_logo.png"
+        <h6 class="flex items-center justify-center gap-2 mb-6 text-5xl font-bold"> <img src="/assets/mob_logo.png"
                 alt="">Vroda
         </h6>
         <p class="font-medium text-center mb-8">Сервіс для швидкого пошуку майстрів та салонів краси з онлайн
