--- a/index.html
+++ b/index.html
@@ -133,7 +133,8 @@
             <p class="mb-8 font-semibold text-sm text-[#999] text-center">Ми прагнемо зробити сферу краси відкритою,
                 доступною та
                 зручною для кожного.</p>
-            <img src="/assets/ourMissionGroup.png" class="-mx-4" alt="`Our mission` decorative line">
+            <img src="/assets/ourMissionGroup.png" class="-mx-4 !min-w-[375px]" alt="`Our mission` decorative line"
+                width="375" height="">
             <div class="flex flex-col gap-4">
                 <div class="flex flex-col">
                     <span class="bg-black p-1.5 size-8 rounded-lg mb-3"><i
@@ -191,7 +192,7 @@
                 </div>
             </div>
         </section>
-        <section class="bg-[#999] pt-8 w-[375px] -ml-4">
+        <section class="bg-[#f1e7e7] pt-8 w-[375px] -ml-4">
             <p
                 class="font-medium text-xs text-center gradient-bg uppercase mb-6 px-4 py-2.5 rounded-2xl w-[200px] mx-auto">
                 Для
@@ -308,8 +309,8 @@
                             <i class="fa-solid fa-arrow-right cursor-pointer"></i> </span>
                     </div>
                 </div>
-                <div class="bg-[#f2f2f2] rounded-2xl"><img src="/assets/line.png" alt="Picture of human holding product"
-                        width="343" height="91" class="mt-8">
+                <div class="bg-[#f2f2f2] rounded-2xl"><img src="/assets/line.png" alt="Decorative line" width="343"
+                        height="91" class="mt-8">
                     <div class="px-4 pt-6">
                         <h5 class="capitalize text-xl font-semibold mb-3 pt-3">Поради для майстрів (як залучати
                             клієнтів, як працювати з рейтингом).</h5>
