mobile version & validator

--- a/about-us.html
+++ b/about-us.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
@@ -25,14 +25,14 @@
             animation: marquee 10s linear infinite;
         }
     </style>
-    <title>Document</title>
+    <title>About Us</title>
 </head>
 
 <body class="container">
     <header class="flex items-center mt-3.5 justify-between mb-10.5">
         <div class="flex items-center gap-2">
             <i class="fa-solid fa-bars w-6 h-6 cursor-pointer"></i>
-            <img src="/assets/mob_logo.png" alt="Website logo" width="40" height="40" />
+            <img src="/assets/mob_logo.png" alt="Website logo" width="40" height="40">
             <p class="font-bold text-3xl">Vroda</p>
         </div>
         <button class="rounded-[11px] bg-black border-0 text-white px-3 py-3.5">Вхід/Реєстрація</button>
