--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="uk">
 
 <head>
     <meta charset="UTF-8" />
@@ -133,8 +133,8 @@
             <p class="mb-8 font-semibold text-sm text-[#999] text-center">Ми прагнемо зробити сферу краси відкритою,
                 доступною та
                 зручною для кожного.</p>
-            <img src="/assets/ourMissionGroup.png" class="-mx-4 !min-w-[375px]" alt="`Our mission` decorative line"
-                width="375" height="">
+            <img src="/assets/ourMissionGroup.png" alt="`Our mission group` line" class="-mx-4 !min-w-[375px]"
+                decorative line" width="375" height="112">
             <div class="flex flex-col gap-4">
                 <div class="flex flex-col">
                     <span class="bg-black p-1.5 size-8 rounded-lg mb-3"><i
@@ -207,15 +207,18 @@
             <div class="flex flex-col gap-6 pb-6">
                 <div class="bg-white rounded-2xl pt-6 px-6 w-[327px] mx-auto">
                     <p class="font-semibold text-center">Зручно керувати своїм записом</p>
-                    <img src="/assets/001/mobHelpOne.png" class="block mx-auto pt-6" />
+                    <img src="/assets/001/mobHelpOne.png" alt="Picture of iPhone with site benefits"
+                        class="block mx-auto pt-6" />
                 </div>
                 <div class="bg-white rounded-2xl pt-6 px-6 w-[327px] mx-auto">
                     <p class="font-semibold text-center">Отримувати більше відгуків та рейтингів</p>
-                    <img src="/assets/mobHelpTwo.png" class="block mx-auto pt-6" />
+                    <img src="/assets/mobHelpTwo.png" alt="Picture of iPhone with site benefits"
+                        class="block mx-auto pt-6" />
                 </div>
                 <div class=" bg-white rounded-2xl pt-6 px-6 w-[327px] mx-auto">
                     <p class="font-semibold text-center">Залишатися на зв’язку з клієнтами через додаток</p>
-                    <img src="/assets/001/mobHelpThree.png" class="block mx-auto pt-6" />
+                    <img src="/assets/001/mobHelpThree.png" alt="Picture of iPhone with site benefits"
+                        class="block mx-auto pt-6" />
                 </div>
             </div>
         </section>
@@ -252,10 +255,10 @@
         </section>
         <section class="mb-8">
             <span class="red font-semibold text-[28px] flex items-center gap-2">Vroda space<img src="/assets/h1line.png"
-                    alt="" width="109" height="13">
+                    alt="Decorative line" width="109" height="13">
                 це</span>
             <p class="text-center  font-semibold text-[28px]">Легкий запис(<img src="/assets/mobUsers.png"
-                    class="inline" alt="" width="80" h="50">) без дзвінків
+                    class="inline" alt="User's profile pictures in a row" width="80" height="50">) без дзвінків
                 та листування.
             </p>
             <p class="font-semibold text-xl text-center mb-14">Перевірені майстрами з відгуками <span
@@ -441,7 +444,7 @@
     </main>
     <footer class="gradient-bg-blue rounded-t-4xl px-6 py-8">
         <h6 class="flex items-center justify-center gap-2 mb-6 text-5xl font-bold"> <img src="/assets/mob_logo.png"
-                alt="">Vroda
+                alt="Websilte logo">Vroda
         </h6>
         <p class="font-medium text-center mb-8">Сервіс для швидкого пошуку майстрів та салонів краси з онлайн
             бронюванням.
