--- a/about-us.html
+++ b/about-us.html
@@ -215,10 +215,13 @@
             краси.</p>
         <nav>
             <ul class="flex flex-col items-center text-center gap-6 text-xl font-semibold">
-                <li>Головна</li>
-                <li>Блог</li>
-                <li>Про нас</li>
-                <li>Контакти та зворотній звʼязок</li>
+                <li><a href="./index.html">Головна</a></li>
+
+                <li><a href="./blog.html">Блог</a></li>
+                <li><a href="./about-us.html">Про нас</a></li>
+
+                <li><a href="./contact-us.html">Контакти та зворотній звʼязок</a></li>
+
                 <li>Політика конфіденційності Vroda Space</li>
                 <li>Умови використання</li>
                 <li>Vroda Space в мережі</li>
