--- a/contact-us.html
+++ b/contact-us.html
@@ -77,7 +77,7 @@
                     </span>
                 </label>
                 <button type="submit"
-                    class="text-[15px] font-semibold rounded-2xl mt-6  w-full bg-red-400 text-white py-2.5">Звʼязатись
+                    class="text-[15px] mb-8 font-semibold rounded-2xl mt-6  w-full bg-red-400 text-white py-2.5">Звʼязатись
                     зі
                     мною</button>
             </form>
@@ -85,7 +85,7 @@
     </main>
     <footer class="gradient-bg-blue rounded-t-4xl px-6 py-8">
         <h6 class="flex items-center justify-center gap-2 mb-6 text-5xl font-bold"> <img src="/assets/mob_logo.png"
-                alt="">Vroda
+                alt="Website logo">Vroda
         </h6>
         <p class="font-medium text-center mb-8">Сервіс для швидкого пошуку майстрів та салонів краси з онлайн
             бронюванням.
@@ -94,10 +94,12 @@
             краси.</p>
         <nav>
             <ul class="flex flex-col items-center text-center gap-6 text-xl font-semibold">
-                <li>Головна</li>
-                <li>Блог</li>
-                <li>Про нас</li>
-                <li>Контакти та зворотній звʼязок</li>
+                <li><a href="./index.html">Головна</a></li>
+                <li><a href="./blog.html"></a>Блог</a></li>
+                <li><a href="./about-us.html">Про нас</a></li>
+
+                <li><a href="./contact-us.html">Контакти та зворотній звʼязок</a></li>
+
                 <li>Політика конфіденційності Vroda Space</li>
                 <li>Умови використання</li>
                 <li>Vroda Space в мережі</li>
