--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 доступною та
                 зручною для кожного.</p>
             <img src="/assets/ourMissionGroup.png" alt="`Our mission group` line" class="-mx-4 !min-w-[375px]"
-                decorative line" width="375" height="112">
+                width="375" height="112">
             <div class="flex flex-col gap-4">
                 <div class="flex flex-col">
                     <span class="bg-black p-1.5 size-8 rounded-lg mb-3"><i
@@ -308,8 +308,9 @@
                             <p class="font-semibold text-xl text-[#999] px-4 py-2.5 border rounded-full border-[#999]">
                                 Тренди</p>
                         </div>
-                        <span class="rounded-lg bg-black text-white size-11 px-2 py-1 flex items-center justify-center">
-                            <i class="fa-solid fa-arrow-right cursor-pointer"></i> </span>
+                        <a href="./blog-item.html"><span
+                                class="rounded-lg bg-black text-white size-11 px-2 py-1 flex items-center justify-center">
+                                <i class="fa-solid fa-arrow-right cursor-pointer"></i> </span></a>
                     </div>
                 </div>
                 <div class="bg-[#f2f2f2] rounded-2xl"><img src="/assets/line.png" alt="Decorative line" width="343"
@@ -453,10 +454,12 @@
             краси.</p>
         <nav>
             <ul class="flex flex-col items-center text-center gap-6 text-xl font-semibold">
-                <li>Головна</li>
-                <li>Блог</li>
-                <li>Про нас</li>
-                <li>Контакти та зворотній звʼязок</li>
+                <li><a href="./index.html">Головна</a></li>
+
+                <li><a href="./blog.html">Блог</a></li>
+                <li><a href="./about-us.html">Про нас</a></li>
+                <li><a href="./contact-us.html">Контакти та зворотній звʼязок</a></li>
+
                 <li>Політика конфіденційності Vroda Space</li>
                 <li>Умови використання</li>
                 <li>Vroda Space в мережі</li>
