--- a/blog.html
+++ b/blog.html
@@ -24,41 +24,50 @@
     </header>
     <main>
         <section class="my-8">
-            <p class="text-right font-semibold text-sm">
-                Залишайтеся з нами, щоб завжди отримувати <span class="red">актуальну інформацію</span> та <span
-                    class="red">бути в курсі</span>
-                останніх подій.
-            </p>
-            <h4 class="font-semibold text-[28px] mb-4 text-center">це Блог <br> Vroda Space</h4>
-            <div class="flex flex-col gap-4">
-                <div class="bg-[#f2f2f2] rounded-2xl"><img src="/assets/mobNewTrends.png"
-                        alt="Picture of human holding product" width="343" height="314" class="rounded-t-2xl">
-                    <div class="px-4 pt-6">
+            <div class="md:flex  md:flex-row-reverse">
+                <p class="text-right font-semibold text-sm md:mt-6">
+                    Залишайтеся з нами, щоб завжди отримувати <span class="red">актуальну інформацію</span> та <span
+                        class="red">бути в курсі</span>
+                    останніх подій.
+                </p>
+                <h4 class="font-semibold text-[28px] mb-4 text-center md:w-[220px] md:text-left">це Блог <br> Vroda
+                    Space</h4>
+            </div>
+            <div class="flex flex-col gap-4 md:flex-row md:flex-wrap md:gap-4">
+                <div class="bg-[#f2f2f2] rounded-2xl md:w-[365px] ">
+                    <img src="/assets/mobNewTrends.png" alt="Picture of human holding product" width="343" height="314"
+                        class="rounded-t-2xl">
+                    <div class="px-4 pt-6 ">
                         <h5 class="capitalize text-xl font-semibold mb-3 pt-3">Нові тренди у світі краси</h5>
                         <p class="truncate-multiline mb-3">Б’юті-індустрія не стоїть на місці, і
                             майстрам важливо постійно
                             вдосконалювати свої навички. У цьому розділі ми
-                            розповідаємо про актуальні тренди, ефективні методи залучення клієнтів і секрети успішної
+                            розповідаємо про актуальні тренди, ефективні методи залучення клієнтів і секрети
+                            успішної
                             роботи. Читай, застосовуй і
-                            розвивай свій бізнес разом із Vroda Space!</p>
+                            розвивай свій бізнес разом із Vroda Space!
+                        </p>
                     </div>
                     <div class="flex items-center justify-between px-4 pb-6">
                         <div class="flex items-center gap-2">
                             <p class="font-semibold text-xl text-[#999] px-4 py-2.5 border rounded-full border-[#999]">
-                                Beauty</p>
+                                Beauty
+                            </p>
                             <p class="font-semibold text-xl text-[#999] px-4 py-2.5 border rounded-full border-[#999]">
-                                Тренди</p>
+                                Тренди
+                            </p>
                         </div>
                         <a href="./blog-item.html"><span
                                 class="rounded-lg bg-black text-white size-11 px-2 py-1 flex items-center justify-center">
                                 <i class="fa-solid fa-arrow-right cursor-pointer"></i> </span></a>
                     </div>
                 </div>
-                <div class="bg-[#f2f2f2] rounded-2xl"><img src="/assets/line.png" alt="Decorative line" width="343"
-                        height="91" class="mt-8">
+                <div class="bg-[#f2f2f2] rounded-2xl md:w-[365px] ">
+                    <img src="/assets/line.png" alt="Decorative line" width="343" height="91" class="mt-8">
                     <div class="px-4 pt-6">
                         <h5 class="capitalize text-xl font-semibold mb-3 pt-3">Поради для майстрів (як залучати
-                            клієнтів, як працювати з рейтингом).</h5>
+                            клієнтів, як працювати з рейтингом).
+                        </h5>
                         <p class="mb-3">Бути б’юті-майстром – це не тільки про талант, а й про вміння
                             залучати клієнтів, працювати з репутацією та розвивати
                             власний бренд...
@@ -66,33 +75,39 @@
                     </div>
                     <div class="flex items-center justify-between px-4 pb-6">
                         <p class="font-semibold text-xl text-white bg-black px-4 py-2.5 rounded-full">
-                            Beauty</p>
+                            Beauty
+                        </p>
                         <span class="rounded-lg bg-black text-white size-11 px-2 py-1 flex items-center justify-center">
                             <i class="fa-solid fa-arrow-right cursor-pointer"></i> </span>
                     </div>
                 </div>
-                <div class="gradient-bg rounded-2xl">
+                <div class="gradient-bg rounded-2xl md:w-[365px] ">
                     <div class="flex items-center justify-between px-4 py-6">
                         <p class="font-semibold text-xl text-white bg-black px-4 py-2.5 rounded-full">
-                            Лайфхаки</p>
+                            Лайфхаки
+                        </p>
                         <span class="rounded-lg bg-black text-white size-11 px-2 py-1 flex items-center justify-center">
                             <i class="fa-solid fa-arrow-right cursor-pointer"></i> </span>
                     </div>
                     <div class="px-4 pt-6">
                         <h5 class="capitalize text-xl font-semibold mb-6 pt-28">Інтерв’ю з топ-майстрами – історії
                             успіху
-                            та професійні лайфхаки!</h5>
-                        <p class="mb-3 font-medium">Дізнайтеся більше про секрети успіху та професійні поради від нашого
+                            та професійні лайфхаки!
+                        </h5>
+                        <p class="mb-3 font-medium">Дізнайтеся більше про секрети успіху та професійні поради від
+                            нашого
                             визнаного
                             майстра тижня.
                         <p>
                     </div>
                 </div>
-                <div class="bg-[#f2f2f2] rounded-2xl"><img src="/assets/line.png" alt="Picture of human holding product"
-                        width="343" height="91" class="mt-8">
+                <div class="bg-[#f2f2f2] rounded-2xl md:w-[365px] ">
+                    <img src="/assets/line.png" alt="Picture of human holding product" width="343" height="91"
+                        class="mt-8">
                     <div class="px-4 pt-6">
                         <h5 class="capitalize text-xl font-semibold mb-3 pt-3">Поради для майстрів (як залучати
-                            клієнтів, як працювати з рейтингом).</h5>
+                            клієнтів, як працювати з рейтингом).
+                        </h5>
                         <p class="mb-3">Бути б’юті-майстром – це не тільки про талант, а й про вміння
                             залучати клієнтів, працювати з репутацією та розвивати
                             власний бренд...
@@ -100,38 +115,48 @@
                     </div>
                     <div class="flex items-center justify-between px-4 pb-6">
                         <p class="font-semibold text-xl text-white bg-black px-4 py-2.5 rounded-full">
-                            Beauty</p>
+                            Beauty
+                        </p>
                         <span class="rounded-lg bg-black text-white size-11 px-2 py-1 flex items-center justify-center">
                             <i class="fa-solid fa-arrow-right cursor-pointer"></i> </span>
                     </div>
                 </div>
-                <div class="bg-[#f2f2f2] rounded-2xl"><img src="/assets/mobNewTrends.png"
-                        alt="Picture of human holding product" width="343" height="314" class="rounded-t-2xl">
-                    <div class="px-4 pt-6">
+            </div>
+            <div class="flex flex-col gap-4 md:flex-row md:flex-wrap md:gap-4 md:mt-5">
+                <div class="bg-[#f2f2f2] rounded-2xl md:w-[365px] ">
+                    <img src="/assets/mobNewTrends.png" alt="Picture of human holding product" width="343" height="314"
+                        class="rounded-t-2xl">
+                    <div class="px-4 pt-6 ">
                         <h5 class="capitalize text-xl font-semibold mb-3 pt-3">Нові тренди у світі краси</h5>
                         <p class="truncate-multiline mb-3">Б’юті-індустрія не стоїть на місці, і
                             майстрам важливо постійно
                             вдосконалювати свої навички. У цьому розділі ми
-                            розповідаємо про актуальні тренди, ефективні методи залучення клієнтів і секрети успішної
+                            розповідаємо про актуальні тренди, ефективні методи залучення клієнтів і секрети
+                            успішної
                             роботи. Читай, застосовуй і
-                            розвивай свій бізнес разом із Vroda Space!</p>
+                            розвивай свій бізнес разом із Vroda Space!
+                        </p>
                     </div>
                     <div class="flex items-center justify-between px-4 pb-6">
                         <div class="flex items-center gap-2">
                             <p class="font-semibold text-xl text-[#999] px-4 py-2.5 border rounded-full border-[#999]">
-                                Beauty</p>
+                                Beauty
+                            </p>
                             <p class="font-semibold text-xl text-[#999] px-4 py-2.5 border rounded-full border-[#999]">
-                                Тренди</p>
+                                Тренди
+                            </p>
                         </div>
-                        <span class="rounded-lg bg-black text-white size-11 px-2 py-1 flex items-center justify-center">
-                            <i class="fa-solid fa-arrow-right cursor-pointer"></i> </span>
+                        <a href="./blog-item.html"><span
+                                class="rounded-lg bg-black text-white size-11 px-2 py-1 flex items-center justify-center">
+                                <i class="fa-solid fa-arrow-right cursor-pointer"></i> </span></a>
                     </div>
                 </div>
-                <div class="bg-[#f2f2f2] rounded-2xl"><img src="/assets/line.png" alt="Decorative line" width="343"
-                        height="91" class="mt-8">
+                <div class="bg-[#f2f2f2] rounded-2xl md:w-[365px] ">
+                    <img src="/assets/line.png" alt="Decorative line" width="343" height="91" class="mt-8">
                     <div class="px-4 pt-6">
                         <h5 class="capitalize text-xl font-semibold mb-3 pt-3">Поради для майстрів (як залучати
-                            клієнтів, як працювати з рейтингом).</h5>
+                            клієнтів, як працювати з рейтингом).
+                        </h5>
                         <p class="mb-3">Бути б’юті-майстром – це не тільки про талант, а й про вміння
                             залучати клієнтів, працювати з репутацією та розвивати
                             власний бренд...
@@ -139,33 +164,39 @@
                     </div>
                     <div class="flex items-center justify-between px-4 pb-6">
                         <p class="font-semibold text-xl text-white bg-black px-4 py-2.5 rounded-full">
-                            Beauty</p>
+                            Beauty
+                        </p>
                         <span class="rounded-lg bg-black text-white size-11 px-2 py-1 flex items-center justify-center">
                             <i class="fa-solid fa-arrow-right cursor-pointer"></i> </span>
                     </div>
                 </div>
-                <div class="gradient-bg rounded-2xl">
+                <div class="gradient-bg rounded-2xl md:w-[365px] ">
                     <div class="flex items-center justify-between px-4 py-6">
                         <p class="font-semibold text-xl text-white bg-black px-4 py-2.5 rounded-full">
-                            Лайфхаки</p>
+                            Лайфхаки
+                        </p>
                         <span class="rounded-lg bg-black text-white size-11 px-2 py-1 flex items-center justify-center">
                             <i class="fa-solid fa-arrow-right cursor-pointer"></i> </span>
                     </div>
                     <div class="px-4 pt-6">
                         <h5 class="capitalize text-xl font-semibold mb-6 pt-28">Інтерв’ю з топ-майстрами – історії
                             успіху
-                            та професійні лайфхаки!</h5>
-                        <p class="mb-3 font-medium">Дізнайтеся більше про секрети успіху та професійні поради від нашого
+                            та професійні лайфхаки!
+                        </h5>
+                        <p class="mb-3 font-medium">Дізнайтеся більше про секрети успіху та професійні поради від
+                            нашого
                             визнаного
                             майстра тижня.
                         <p>
                     </div>
                 </div>
-                <div class="bg-[#f2f2f2] rounded-2xl"><img src="/assets/line.png" alt="Picture of human holding product"
-                        width="343" height="91" class="mt-8">
+                <div class="bg-[#f2f2f2] rounded-2xl md:w-[365px] ">
+                    <img src="/assets/line.png" alt="Picture of human holding product" width="343" height="91"
+                        class="mt-8">
                     <div class="px-4 pt-6">
                         <h5 class="capitalize text-xl font-semibold mb-3 pt-3">Поради для майстрів (як залучати
-                            клієнтів, як працювати з рейтингом).</h5>
+                            клієнтів, як працювати з рейтингом).
+                        </h5>
                         <p class="mb-3">Бути б’юті-майстром – це не тільки про талант, а й про вміння
                             залучати клієнтів, працювати з репутацією та розвивати
                             власний бренд...
@@ -173,7 +204,8 @@
                     </div>
                     <div class="flex items-center justify-between px-4 pb-6">
                         <p class="font-semibold text-xl text-white bg-black px-4 py-2.5 rounded-full">
-                            Beauty</p>
+                            Beauty
+                        </p>
                         <span class="rounded-lg bg-black text-white size-11 px-2 py-1 flex items-center justify-center">
                             <i class="fa-solid fa-arrow-right cursor-pointer"></i> </span>
                     </div>
